--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
             </div>
 
             <!-- actual upload which is hidden -->
-            <input type="file" id="upload__btn" accept="image/*" onchange="showPreview(event);" hidden/>
+            <!-- <input type="file" #uploadBtn id="upload__btn" accept="image/*" onchange="showPreview(event);" hidden/> -->
 
             <div class="upload__btn__div">
 
@@ -31,8 +31,12 @@
                 <label class="upload__btn" for="upload__btn"><i class="uil uil-upload"></i>
                     Upload Your Pug-Shot </label>
 
+                <!-- actual upload which is hidden -->
+                <input type="file" #uploadBtn id="upload__btn" accept="image/*" (change)="onFileChange($event)"
+                    onchange="showPreview(event);" hidden />
+
                 <!-- name of file chosen -->
-                <span id="file-chosen">No file chosen</span>
+                <span id="file-chosen">{{ fileChosen }}</span>
             </div>
         </div>
 
