--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,25 @@
 <nav class="navbar">
-    <div class="nav__container">
+    <div class="container">
 
-        <div class="navbar__header">
-            <a href="index.html">
+        <div class="navbar-header">
+            <button class="navbar-toggler" data-toggle="open-navbar1">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <a href="#">
                 <h4>Pawsitive<span>ID</span></h4>
             </a>
         </div>
 
-        <div class="navbar__menu" id="open__navbar1">
-            <ul class="navbar__nav">
+        <div class="navbar-menu" id="open-navbar1">
+            <ul class="navbar-nav">
                 <li><a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
-                <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About Us</a></li>
+                <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About</a></li>
                 <li><a routerLink="/bts" routerLinkActive="active" ariaCurrentWhenActive="page">BTS</a></li>
                 <li><a routerLink="/blog" routerLinkActive="active" ariaCurrentWhenActive="page">Blog</a></li>
             </ul>
         </div>
     </div>
 </nav>
+
