--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,16 +1,6 @@
 .home__container {
     display: flex;
     justify-content: space-evenly;
-    height: 100vh;
-    /* background-color: #7171fd; */
-    /* background-color: #0CE853; */
-    /* background-color: #f6fba2;
-    background-image: linear-gradient(315deg, #f6fba2 0%, #20ded3 74%); */
-    /* background: hsla(224, 56%, 58%, 1);
-    background: linear-gradient(90deg, hsla(224, 56%, 58%, 1) 0%, hsla(0, 0%, 80%, 1) 50%, hsla(69, 84%, 76%, 1) 100%);
-    background: -moz-linear-gradient(90deg, hsla(224, 56%, 58%, 1) 0%, hsla(0, 0%, 80%, 1) 50%, hsla(69, 84%, 76%, 1) 100%);
-    background: -webkit-linear-gradient(90deg, hsla(224, 56%, 58%, 1) 0%, hsla(0, 0%, 80%, 1) 50%, hsla(69, 84%, 76%, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#5676D0", endColorstr="#CCCCCC", GradientType=1 ); */
 }
 
 .left__container {
@@ -18,7 +8,6 @@
     justify-content: space-evenly;
     display: flex;
     flex-direction: column;
-    /* background-color: #eceef3;    */
 }
 
 .home__img {
@@ -76,7 +65,6 @@
 .upload__btn__div span {
     align-items: center;
     text-align: center;
-    /* color: #fff; */
 }
 
 #file-chosen {
@@ -117,4 +105,58 @@
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
     background-color: #fff;
     border-radius: 10px;
+}
+
+
+@media screen and (max-width: 768px){
+    .home__container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+    }
+
+    .left__container{
+        width: 100%;
+        padding-top: 30px;
+    }
+
+    .home__gif{
+        width: 80%;
+        margin: auto;
+    }
+
+    .home__desc p{
+        padding-top: 60px;
+        font-size: 16px;
+    }
+
+    .right__container{
+        width: 100%;
+    }
+
+    .upload__preview{
+        margin: auto;
+        width: 80%;
+    }
+
+    .upload__img__bg{
+        margin: auto;
+        width: 100%;
+    }
+
+    #file-ip-1-preview{
+        margin: auto;
+        width: 100%;
+    }
+
+    .upload__btn__div{
+        margin: auto;
+        margin-top: 40px;
+    }
+
+    .result__bar{
+        margin: 15px auto 30px;
+    }
 }
