responsive - about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -43,6 +43,7 @@
             <h1><u>About team</u></h1>
         </div>
 
+        <!-- ============== Stephen Boorman ============== -->
         <div class="team__card__container">
             <div class="team__left">
                 <div class="team__card">
@@ -52,117 +53,128 @@
                     <div class="team__specs">
                         <div class="person__name">Stephen Boorman</div>
                         <div class="person__position">Chief Cuddler Officer</div>
-                        <div class="person__quote">"The better I get to know men, <br> 
-                            the more I find myself loving dogs."</div>
+                        <div class="person__quote">"The better I get to know men,
+                            the more I find myself loving dogs."
+                        </div>
                         <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="">
+                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
                     </div>
                     <div class="person__social">
-                        <i class="uil uil-linkedin"></i> 
-                        <i class="uil uil-github"></i>
-                        <i class="uil uil-instagram-alt"></i>
+                        <a href="#"><i class="uil uil-linkedin"></i></a>
+                        <a href="#"><i class="uil uil-github"></i></a>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
 
+                <!-- ============== James Jared Baca ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/male.png" alt="Stephen Boorman">
+                        <img src="assets/images/male.png" alt="James Jared Baca">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">James Jared Baca</div>
                         <div class="person__position">Guardian of the Kibble Kingdom</div>
-                        <div class="person__quote">"Dogs are not our whole life, <br>
-                            but they make our lives whole."</div>
-                            <div class="person__fav__dog">Fav Dog: Golden Retriever
-                                <img src="assets/images/fav_dog_3.png" alt="">
-                            </div>
+                        <div class="person__quote">"Dogs are not our whole life,
+                            but they make our lives whole."
                         </div>
-                        <div class="person__social">
-                            <i class="uil uil-linkedin"></i> 
-                            <i class="uil uil-github"></i>
-                            <i class="uil uil-instagram-alt"></i>
+                        <div class="person__fav__dog">Fav Dog: Golden Retriever
+                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
+                    </div>
+                    <div class="person__social">
+                        <a href="#"><i class="uil uil-linkedin"></i></a>
+                        <a href="#"><i class="uil uil-github"></i></a>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                    </div>
                 </div>
 
+
+                <!-- ============== Sri Nikhil Reddy Gudibandi ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/team/Sri.png" alt="Stephen Boorman">
+                        <img src="assets/images/team/Sri.png" alt="Sri Nikhil Reddy Gudibandi">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Sri Nikhil Reddy Gudibandi</div>
                         <div class="person__position">Master of Paw-sonal Hygiene</div>
-                        <div class="person__quote">"Dogs do speak, <br>
-                            but only to those who know how to listen."</div>
-                            <div class="person__fav__dog">Fav Dog: Golden Retriever
-                                <img src="assets/images/fav_dog_3.png" alt="">
-                            </div>
+                        <div class="person__quote">"Dogs do speak,
+                            but only to those who know how to listen."
                         </div>
-                        <div class="person__social">
-                            <i class="uil uil-linkedin"></i> 
-                            <i class="uil uil-github"></i>
-                            <i class="uil uil-instagram-alt"></i>
+                        <div class="person__fav__dog">Fav Dog: Golden Retriever
+                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
+                    </div>
+                    <div class="person__social">
+                        <a href="#"><i class="uil uil-linkedin"></i></a>
+                        <a href="#"><i class="uil uil-github"></i></a>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                    </div>
                 </div>
             </div>
 
+
+            <!-- ============== Shiyu Wang ============== -->
             <div class="team__right">
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/female.png" alt="Stephen Boorman">
+                        <img src="assets/images/female.png" alt="Shiyu Wang">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Shiyu Wang</div>
                         <div class="person__position">Chief Belly Rub Officer</div>
-                        <div class="person__quote">"A dog is the only thing on earth <br>
+                        <div class="person__quote">"A dog is the only thing on earth
                             that loves you more than he loves himself."</div>
-                            <div class="person__fav__dog">Fav Dog: Golden Retriever
-                                <img src="assets/images/fav_dog_3.png" alt="">
-                            </div>
+                        <div class="person__fav__dog">Fav Dog: Golden Retriever
+                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
-                        <div class="person__social">
-                            <i class="uil uil-linkedin"></i> 
-                            <i class="uil uil-github"></i>
-                            <i class="uil uil-instagram-alt"></i>
-                        </div>
+                    </div>
+                    <div class="person__social">
+                        <a href="#"><i class="uil uil-linkedin"></i></a>
+                        <a href="#"><i class="uil uil-github"></i></a>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                    </div>
                 </div>
 
+
+                <!-- ============== Sri Divya Raparala ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/female.png" alt="Stephen Boorman">
+                        <img src="assets/images/female.png" alt="Sri Divya Raparala">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Sri Divya Raparala</div>
                         <div class="person__position">Head Scratcher-in-Chief</div>
                         <div class="person__quote">"Happiness is a warm puppy."</div>
                         <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="">
+                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
                     </div>
                     <div class="person__social">
-                        <i class="uil uil-linkedin"></i> 
-                        <i class="uil uil-github"></i>
-                        <i class="uil uil-instagram-alt"></i>
+                        <a href="#"><i class="uil uil-linkedin"></i></a>
+                        <a href="#"><i class="uil uil-github"></i></a>
+                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
 
+                <!-- ============== Rubeena Riyas ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/female.png" alt="Stephen Boorman">
+                        <img src="assets/images/female.png" alt="Rubeena Riyas">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Rubeena Riyas</div>
                         <div class="person__position">Fur Baby Wrangler</div>
-                        <div class="person__quote">"Once you have had a wonderful dog, <br>
-                             a life without one is a life diminished."</div>
-                             <div class="person__fav__dog">Fav Dog: Golden Retriever
-                                <img src="assets/images/fav_dog_3.png" alt="">
+                        <div class="person__quote">"Once you have had a wonderful dog,
+                            a life without one is a life diminished."</div>
+                            <div class="person__fav__dog">Fav Dog: Golden Retriever
+                                <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                             </div>
                         </div>
                         <div class="person__social">
-                            <i class="uil uil-linkedin"></i> 
-                            <i class="uil uil-github"></i>
-                            <i class="uil uil-instagram-alt"></i>
+                            <a href="#"><i class="uil uil-linkedin"></i></a>
+                            <a href="#"><i class="uil uil-github"></i></a>
+                            <a href="#"><i class="uil uil-instagram-alt"></i></a>
                         </div>
                 </div>
             </div>
