--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,10 +1,5 @@
 /* ================ ABOUT PAGE ====================== */
 
-/* .about__container{
-    background-color: #f6fba2;
-    background-image: linear-gradient(315deg, #f6fba2 0%, #20ded3 74%);    
-} */
-
 .about__project {
     color: #000;
     padding: 20px;
@@ -17,12 +12,6 @@
 
 .about__desc {
     padding: 20px 50px 20px 50px;
-    /* background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 ); */
 }
 
 .about__team {
@@ -105,4 +94,46 @@
 
 .person__social i {
     font-size: 18px;
+    color: #000;
+}
+
+
+/* ============ RESPONSIVE ============= */
+
+@media screen and (max-width: 768px) {
+    .team__card__container{
+        display: grid;
+    }
+
+    .team__left{
+        width: 100%;
+    }
+
+    .team__right{
+        width: 100%;
+    }
+
+    .team__img{
+        margin: auto;
+    }
+
+    .person__name{
+        font-size: 14px;
+    }
+
+    .person__position{
+        font-size: 12px;
+    }
+
+    .person__quote{
+        font-size: 14px;
+    }
+
+    .person__fav__dog{
+        font-size: 14px;
+    }
+
+    .person__social{
+        margin: auto;
+    }
 }
