--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -61,9 +61,9 @@
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#"><i class="uil uil-linkedin"></i></a>
-                        <a href="#"><i class="uil uil-github"></i></a>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
 
@@ -83,9 +83,9 @@
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#"><i class="uil uil-linkedin"></i></a>
-                        <a href="#"><i class="uil uil-github"></i></a>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
 
@@ -106,9 +106,9 @@
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#"><i class="uil uil-linkedin"></i></a>
-                        <a href="#"><i class="uil uil-github"></i></a>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
             </div>
@@ -130,9 +130,9 @@
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#"><i class="uil uil-linkedin"></i></a>
-                        <a href="#"><i class="uil uil-github"></i></a>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
 
@@ -151,9 +151,9 @@
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#"><i class="uil uil-linkedin"></i></a>
-                        <a href="#"><i class="uil uil-github"></i></a>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
+                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
 
@@ -172,9 +172,9 @@
                             </div>
                         </div>
                         <div class="person__social">
-                            <a href="#"><i class="uil uil-linkedin"></i></a>
-                            <a href="#"><i class="uil uil-github"></i></a>
-                            <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                            <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
+                            <a href="#" target="_blank"><i class="uil uil-github"></i></a>
+                            <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
                         </div>
                 </div>
             </div>
