responsive - bts page

--- a/src/app/bts/bts.component.css
+++ b/src/app/bts/bts.component.css
@@ -11,7 +11,6 @@
 }
 
 .rep__button {
-    /* display: inline-block; */
     color: #000;
     padding: 1rem;
     border-radius: .5rem;
@@ -23,8 +22,6 @@
     height: 50px;
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    /* backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px); */
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
@@ -50,4 +47,12 @@
     backdrop-filter: blur(6.2px);
     -webkit-backdrop-filter: blur(6.2px);
     border: 1px solid rgba(255, 255, 255, 0.92);
+}
+
+/* ================ RESPONSIVE ================= */
+
+@media screen and (max-width: 768px) {
+    .pdid__desc{
+        padding: 10px;
+    }
 }
